// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentHeader should render loggedIn user header 1`] = `
<div
  class="jsx-2131308479 header"
  id="SmartFAQ_header"
>
  <div
    class="jsx-2131308479 HeaderFAQ"
  >
    <div
      class="jsx-2131308479 closeButton"
    >
      <div
        class="jsx-477917638 close-icon"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="24px"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle;color:#46515e"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
    <div
      class="jsx-1684029042 jsx-2367066345 loggedIn"
    >
      <div
        class="jsx-1684029042 jsx-2367066345 helpHeader"
      >
        Help
      </div>
      <div
        class="jsx-1684029042 jsx-2367066345 links"
      >
        <div
          class="jsx-1684029042 jsx-2367066345 faqLink desktopOnly"
        >
          <a
            class="jsx-3798246845 primary"
            href="/helpcenter"
            rel="noopener noreferrer"
            target="_blank"
          >
            Full FAQ site
            <span
              class="jsx-3798246845 inline-icon"
            >
              <div
                class="jsx-3798246845 open-icon"
              >
                <svg
                  fill="currentColor"
                  height="16px"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align:middle;color:#00a991"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M17.444 17.444H6.556V6.556H12V5H6.556C5.692 5 5 5.7 5 6.556v10.888C5 18.3 5.692 19 6.556 19h10.888C18.3 19 19 18.3 19 17.444V12h-1.556v5.444zM13.556 5v1.556h2.792L8.702 14.2 9.8 15.298l7.645-7.646v2.792H19V5h-5.444z"
                  />
                </svg>
              </div>
            </span>
          </a>
        </div>
        <div
          class="jsx-1684029042 jsx-2367066345 desktopOnly"
        >
          <div
            class="jsx-1683419278 signOut"
            role="button"
            tabindex="0"
          >
            <p
              class="Text__StyledText-inVtPV dVuICh"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentHeader should render loggedOut user header 1`] = `
<div
  class="jsx-2131308479 header"
  id="SmartFAQ_header"
>
  <div
    class="jsx-2131308479 HeaderFAQ"
  >
    <div
      class="jsx-2131308479 closeButton"
    >
      <div
        class="jsx-477917638 close-icon"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="24px"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle;color:#46515e"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
    <div
      class="jsx-2367066345 jsx-1604692328 loggedOut"
    >
      <div
        class="jsx-2367066345 jsx-1604692328 signInOrBack"
      >
        <div
          class="jsx-2367066345 jsx-1604692328 backButton"
        >
          <div
            class="jsx-1190988628 back"
            data-cy="back-button"
            role="button"
            tabindex="-1"
          >
            <div
              class="jsx-1190988628 chevron"
            >
              <svg
                fill="currentColor"
                height="16px"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle;color:#8291a6"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </div>
            <span
              class="Text__StyledText-inVtPV iqjyyW"
            >
              Back
            </span>
          </div>
        </div>
      </div>
      <p
        class="jsx-2367066345 jsx-1604692328 helpHeader"
      >
        Help
      </p>
    </div>
  </div>
</div>
`;
